v0.19.0/_sources/content/tutorials/07-fdem/index.rst.txt
:orphan:

Frequency-Domain Electromagnetics
=================================



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we use the module SimPEG.electromangetics.frequency_domain_1d to predict frequency domain ...">

.. only:: html

  .. image:: /content/tutorials/07-fdem/images/thumb/sphx_glr_plot_fwd_1_em1dfm_thumb.png
    :alt:

  :ref:`sphx_glr_content_tutorials_07-fdem_plot_fwd_1_em1dfm.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">1D Forward Simulation for a Single Sounding</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we use the module SimPEG.electromangetics.frequency_domain_1d to compare predicted frequen...">

.. only:: html

  .. image:: /content/tutorials/07-fdem/images/thumb/sphx_glr_plot_fwd_1_em1dfm_dispersive_thumb.png
    :alt:

  :ref:`sphx_glr_content_tutorials_07-fdem_plot_fwd_1_em1dfm_dispersive.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">1D Forward Simulation for a Susceptible and Chargeable Earth</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we use the module SimPEG.electromagnetics.frequency_domain to simulate the FDEM response f...">

.. only:: html

  .. image:: /content/tutorials/07-fdem/images/thumb/sphx_glr_plot_fwd_2_fem_cyl_thumb.png
    :alt:

  :ref:`sphx_glr_content_tutorials_07-fdem_plot_fwd_2_fem_cyl.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">3D Forward Simulation on a Cylindrical Mesh</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we use the module SimPEG.electromagnetics.frequency_domain to simulate the FDEM response f...">

.. only:: html

  .. image:: /content/tutorials/07-fdem/images/thumb/sphx_glr_plot_fwd_3_fem_3d_thumb.png
    :alt:

  :ref:`sphx_glr_content_tutorials_07-fdem_plot_fwd_3_fem_3d.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">3D Forward Simulation on a Tree Mesh</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we use the module SimPEG.electromangetics.frequency_domain_1d to invert frequency domain d...">

.. only:: html

  .. image:: /content/tutorials/07-fdem/images/thumb/sphx_glr_plot_inv_1_em1dfm_thumb.png
    :alt:

  :ref:`sphx_glr_content_tutorials_07-fdem_plot_inv_1_em1dfm.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">1D Inversion of for a Single Sounding</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /content/tutorials/07-fdem/plot_fwd_1_em1dfm
   /content/tutorials/07-fdem/plot_fwd_1_em1dfm_dispersive
   /content/tutorials/07-fdem/plot_fwd_2_fem_cyl
   /content/tutorials/07-fdem/plot_fwd_3_fem_3d
   /content/tutorials/07-fdem/plot_inv_1_em1dfm


.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-gallery

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download all examples in Python source code: 07-fdem_python.zip </content/tutorials/07-fdem/07-fdem_python.zip>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download all examples in Jupyter notebooks: 07-fdem_jupyter.zip </content/tutorials/07-fdem/07-fdem_jupyter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
