v0.22.2/_sources/content/tutorials/07-fdem/index.rst.txt
:orphan:

Frequency-Domain Electromagnetics
=================================



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we use the module simpeg.electromangetics.frequency_domain_1d to predict frequency domain data for a single sounding over a 1D layered Earth. In this tutorial, we focus on the following:">

.. only:: html

  .. image:: /content/tutorials/07-fdem/images/thumb/sphx_glr_plot_fwd_1_em1dfm_thumb.png
    :alt:

  :ref:`sphx_glr_content_tutorials_07-fdem_plot_fwd_1_em1dfm.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">1D Forward Simulation for a Single Sounding</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we use the module simpeg.electromangetics.frequency_domain_1d to compare predicted frequency domain data for a single sounding when the Earth is purely conductive, conductive and magnetically susceptible, and when it is chargeable. In this tutorial, we focus on:">

.. only:: html

  .. image:: /content/tutorials/07-fdem/images/thumb/sphx_glr_plot_fwd_1_em1dfm_dispersive_thumb.png
    :alt:

  :ref:`sphx_glr_content_tutorials_07-fdem_plot_fwd_1_em1dfm_dispersive.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">1D Forward Simulation for a Susceptible and Chargeable Earth</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we use the module simpeg.electromagnetics.frequency_domain to simulate the FDEM response for a borehole survey using a cylindrical mesh and radially symmetric conductivity model. For this tutorial, we focus on the following:">

.. only:: html

  .. image:: /content/tutorials/07-fdem/images/thumb/sphx_glr_plot_fwd_2_fem_cyl_thumb.png
    :alt:

  :ref:`sphx_glr_content_tutorials_07-fdem_plot_fwd_2_fem_cyl.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">3D Forward Simulation on a Cylindrical Mesh</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we use the module simpeg.electromagnetics.frequency_domain to simulate the FDEM response for an airborne survey using an OcTree mesh and a conductivity/resistivity model. To limit computational demant, we simulate airborne data at a single frequency for a vertical coplanar survey geometry. This tutorial can be easily adapted to simulate data at many frequencies. For this tutorial, we focus on the following:">

.. only:: html

  .. image:: /content/tutorials/07-fdem/images/thumb/sphx_glr_plot_fwd_3_fem_3d_thumb.png
    :alt:

  :ref:`sphx_glr_content_tutorials_07-fdem_plot_fwd_3_fem_3d.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">3D Forward Simulation on a Tree Mesh</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we use the module simpeg.electromangetics.frequency_domain_1d to invert frequency domain data and recover a 1D electrical conductivity model. In this tutorial, we focus on the following:">

.. only:: html

  .. image:: /content/tutorials/07-fdem/images/thumb/sphx_glr_plot_inv_1_em1dfm_thumb.png
    :alt:

  :ref:`sphx_glr_content_tutorials_07-fdem_plot_inv_1_em1dfm.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">1D Inversion of for a Single Sounding</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /content/tutorials/07-fdem/plot_fwd_1_em1dfm
   /content/tutorials/07-fdem/plot_fwd_1_em1dfm_dispersive
   /content/tutorials/07-fdem/plot_fwd_2_fem_cyl
   /content/tutorials/07-fdem/plot_fwd_3_fem_3d
   /content/tutorials/07-fdem/plot_inv_1_em1dfm


.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-gallery

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download all examples in Python source code: 07-fdem_python.zip </content/tutorials/07-fdem/07-fdem_python.zip>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download all examples in Jupyter notebooks: 07-fdem_jupyter.zip </content/tutorials/07-fdem/07-fdem_jupyter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
